WIP: Work in progress

--- a/CapRenManager/CapRenManager/ucPassword.resx
+++ b/CapRenManager/CapRenManager/ucPassword.resx
@@ -117,11 +117,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DocPath" xml:space="preserve">
-    <value />
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Docs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Docs.docx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAA6JJREFUeF7tmr9rVEEQx4OIQUQLIYKIkkIESSeiBEHSWQjXaPAPUAhGC0kj/oJD
+        EMFCbNJZKTbpUojaGLUJpIgoHIgEg4UQkuo47nF3ebn4nZ1vzjwvv+69nGZv5wPLvZ15Ozszt7v3bt92
+        GYZhGIZhGIZhGIZhGIZheEEURUeXl5eHUJ4sLS09RBmq1WqnqDZWqFarffV6/T0StR6fFxcX+3l72MRx
+        nEOyykzMuuCeGu4dZLMwwag5h1xEmpLNkaTh4zybh8Xc3Nw+JOCHpqIlfkpbmgkHWdCZgJaRtjQTDoh7
+        TMNPxRjNhAOCntHYWwdTeZpmwgFxz2v4qZihmXCQUcLgWwZtJ2kmHBD3qIafilGaCQc8g11g8C0jbWkm
+        LBD7uKZg62A6vmPz8ED8PUjAd03Flpgtl8uH2TxMJAGyiDMh64J7ClEUHWGzsJmYmNiNp/frkjiUOnO0
+        wix09/G5l7cbqymVSofkT7nsg8k1xYZhtA9Z6LEujaA8QxltsUibe9Vq9STNdS6FQmEPgn2KBbzilvMM
+        yI8DbL3o2L0xbhhutG+fCticLhaLB9lNZ5DP53chsDeMcduB7U/yaMLu/Acx3dXQ2sojduc3eJ46jREQ
+        M6i2IX1UKpXj7NZfEMhrxtR2pC926ycYXWcYyz8jjuOL7N4/Nhhd36CTd4xpKaL9B14ngNzP7R/43qsh
+        NDEvaw2v0yLvA2Rr6JdWm+ilG/6Ah8oHdD4BpswVfBzQWnqkD9i6zGoC6ds54RP49r/S/waQTYkOlz0q
+        yUQ3+5livQFkBdF5A3zuVteTyLaN6LdhSgo97OusVhPIXy+XUC+AswPO7VXgW/9Itej7VJoeOUtGc2Lv
+        rUoT+HM8CmvIDTrdQGRUS4D9Ks1EH81t2t+OB/6+VLf/IIfmqF5zBKagMYLENmWreU71zkcWXTq9wjxV
+        DtRzKs7EAM05UC+qWPFm4YevTQs+nE+82odoUDWZyNGcA338ffTAj4UfTq413RLTA/WrKs5E4vgm6k3L
+        ANj5C79sHcPRMXzjJfXZLcB3qHZANKyaTAzTnAP1xyp2I1qY9OoE9sLCwn74LlNPDs5dotghCZTAsgAb
+        IzTnQN291xQ51Mco7gwQUN5FnY08zXU+CLYb/wOvYUSkPiMGbtNcWCBw2dW4ian0Cp9fUJreKCGxsmM7
+        izKO+251xM7qdiEvM+SIAJJyQoocQOmoFxyGYRiGYRiGYRiGYRjG/6Or6zdXshgwKCk3/AAAAABJRU5E
+        rkJggg==
+</value>
   </data>
 </root>
